...
struct ContentView: View {
  @State private var displayText = AttributedString("") //Inital text

    var body: some View {
        VStack {
            HStack {
                Text("OWASP MAS")
                    .font(.title)
                    .fontWeight(.bold)
                    .font(.custom("Helvetica Neue", size: 24))

                Spacer()

...
                        }
                        catch {
                            self.displayText.append(AttributedString(result))
                        }
                    }
                }) {
                    Text("Start")
                        .foregroundColor(.white)
                        .padding(.horizontal, 20)
                        .padding(.vertical, 10)
                        .font(.custom("Helvetica Neue", size: 14))
                }
                .background(
...
