appId: org.owasp.mastestapp.MASTestApp-iOS
---
- launchApp
- assertVisible: "OWASP MAS"
- takeScreenshot: before
- tapOn: "Start"
- takeScreenshot: after
- assertVisible: ".*Random Number.*"
- stopApp
